更新 build-armbian.yml

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -22,7 +22,7 @@ on:
       armbian_board:
         description: ”s905l3a-cm311."
         required: false
-        default: "all"
+        default: "s905l3a"
         type: choice
         options:
           - all
